proper jwt and creating posts comments etc